[tool.poetry]
name = "course-module-3"
version = "0.1.0"
description = ""
authors = ["Gabdullin_Alex <alexrexp@gmail.com>"]
readme = "README.md"
packages = [{include = "course_module_3"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"

[tool.poetry.scripts]
get-sorted = 'main:get_sorted'
get-banch = 'main:get_banch'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
